dev/testdata/tracing/1-tracing.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: Tracing
metadata:
  name: tracing
spec:
  client_sampling:
    value: 100
  random_sampling:
    value: 100
  overall_sampling:
    value: 100
  verbose: true
  max_path_tag_length: 256
  provider:
    name: oltp
    typed_config:
      "@type": type.googleapis.com/envoy.config.trace.v3.OpenTelemetryConfig
      grpc_service:
        envoy_grpc:
          cluster_name: opentelemetry_collector
          max_receive_message_length: 0
          skip_envoy_headers: true # default = false
      service_name: "envoy_proxy"
---
apiVersion: envoy.kaasops.io/v1alpha1
kind: Cluster
metadata:
  name: opentelemetry-collector
spec:
  name: opentelemetry_collector
  connect_timeout: 1s
  type: STRICT_DNS
  lb_policy: ROUND_ROBIN
  http2_protocol_options: { }
  load_assignment:
    cluster_name: opentelemetry_collector
    endpoints:
      - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: otel-collector.observability
                  port_value: 4317
